--- a/mail/app/Makefile.in
+++ b/mail/app/Makefile.in
@@ -80,6 +80,11 @@ DESKTOP_ICONS = \
 	abcardWindow \
 	addressbookWindow \
 	msgcomposeWindow \
+	calendar-alarm-dialog \
+	calendar-event-dialog \
+	calendar-event-summary-dialog \
+	calendar-task-dialog \
+	calendar-task-summary-dialog \
 	$(NULL)
 
 BRANDED_ICONS = \
