Backed out changeset d715f9a214e1 (no bug, temporary commit) rs=backout a=dandarnell

--- a/.gecko_rev.yml
+++ b/.gecko_rev.yml
@@ -1,7 +1,8 @@
 ---
 GECKO_BASE_REPOSITORY: https://hg.mozilla.org/mozilla-unified
-GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/try
-GECKO_HEAD_REV: da0efeac689a71d066fe661208233426ba86d9fd
+GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/releases/mozilla-beta
+GECKO_HEAD_REF: FIREFOX_141_0b9_RELEASE
+GECKO_HEAD_REV: cfaf04caac5814932707addfd61af21c6ff1e1ad
 ######
 
 ### For comm-central
