No bug - Pin mozilla-release (FIREFOX_141_0_BUILD2/985915ed555). r=release a=coreycb

--- a/.gecko_rev.yml
+++ b/.gecko_rev.yml
@@ -1,7 +1,8 @@
 ---
 GECKO_BASE_REPOSITORY: https://hg.mozilla.org/mozilla-unified
-GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/try
-GECKO_HEAD_REV: da0efeac689a71d066fe661208233426ba86d9fd
+GECKO_HEAD_REPOSITORY: https://hg-edge.mozilla.org/releases/mozilla-release
+GECKO_HEAD_REF: FIREFOX_141_0_BUILD2
+GECKO_HEAD_REV: 985915ed555fa507cbb70d1d1d6df88cdec1f581
 ######
 
 ### For comm-central
