No bug - Pin mozilla-beta (FIREFOX_142_0b1_RELEASE/2015f93eb32). r=release a=dandarnell

--- a/.gecko_rev.yml
+++ b/.gecko_rev.yml
@@ -1,7 +1,8 @@
 ---
 GECKO_BASE_REPOSITORY: https://hg.mozilla.org/mozilla-unified
-GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/mozilla-central
-GECKO_HEAD_REF: default
+GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/releases/mozilla-beta
+GECKO_HEAD_REF: FIREFOX_142_0b1_RELEASE
+GECKO_HEAD_REV: 2015f93eb324c2f5ec3474d0750f1216cc6e3e16
 ######
 
 ### For comm-central
