Bug 1986628 - Display message sending progress in the taskbar/dock. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D263530

--- a/mail/components/compose/test/browser/browser.toml
+++ b/mail/components/compose/test/browser/browser.toml
@@ -19,6 +19,8 @@ subsuite = "thunderbird"
 ["browser_sendMessage_certError.js"]
 
 ["browser_sendMessage_oAuth2.js"]
+tags = "oauth"
+
+["browser_sendMessage_progress.js"]
 
 ["browser_sendMessage_spellCheck.js"]
-tags = "oauth"
