Bug 1957486 - Implement a more consistent drop widget. r=freaktechnik
- The dragged folder row is faded and gets a dashed border.
- The drop target is the same one used for tabs reordering.

Differential Revision: https://phabricator.services.mozilla.com/D256731

--- a/mail/base/test/widgets/browser.toml
+++ b/mail/base/test/widgets/browser.toml
@@ -14,6 +14,9 @@ support-files = ["files/**"]
 ["browser_autoTreeView.js"]
 skip-if = ["headless && os == 'linux'"]  # See bug 1806870.
 
+["browser_dropIndicator.js"]
+skip-if = ["headless"]
+
 ["browser_formPickers.js"]
 
 ["browser_formPickers_webextensions.js"]
