Bug 1978987 - Test importing address books in ThunderbirdProfileImporter. r=mkmelin
Differential Revision: https://phabricator.services.mozilla.com/D262559

--- a/mailnews/import/test/unit/xpcshell.toml
+++ b/mailnews/import/test/unit/xpcshell.toml
@@ -10,6 +10,10 @@ tags = ["import"]
 tags = ["vcard"]
 
 ["test_ThunderbirdProfileImporter.js"]
+support-files = [
+  "../../../../mail/components/addrbook/test/browser/data/import.mab",
+  "../../../../mail/components/addrbook/test/browser/data/import.sql",
+]
 
 ["test_outlook_settings.js"]
 run-if = ["os == 'win'"]
