No Bug - Vendored rust from mozilla-beta r+a=sking

--- a/rust/.cargo/config.toml.in
+++ b/rust/.cargo/config.toml.in
@@ -61,9 +61,9 @@ git = "https://github.com/jfkthame/mapped_hyph.git"
 rev = "eff105f6ad7ec9b79816cfc1985a28e5340ad14b"
 replace-with = "vendored-sources"
 
-[source."git+https://github.com/mozilla/application-services?rev=e88505b99a7355dcb5121ec68eec8e6e97657330"]
+[source."git+https://github.com/mozilla/application-services?branch=desktop-143"]
 git = "https://github.com/mozilla/application-services"
-rev = "e88505b99a7355dcb5121ec68eec8e6e97657330"
+branch = "desktop-143"
 replace-with = "vendored-sources"
 
 [source."git+https://github.com/mozilla/audioipc?rev=ec44d33e5924f6618467fdb18010d626701fd110"]
@@ -71,9 +71,9 @@ git = "https://github.com/mozilla/audioipc"
 rev = "ec44d33e5924f6618467fdb18010d626701fd110"
 replace-with = "vendored-sources"
 
-[source."git+https://github.com/mozilla/cubeb-coreaudio-rs?rev=5f12ec4065de7c532c483cdad93b7f50cca67e7d"]
+[source."git+https://github.com/mozilla/cubeb-coreaudio-rs?rev=721b915d12dd899a67596cd3d9357a31c0af45b5"]
 git = "https://github.com/mozilla/cubeb-coreaudio-rs"
-rev = "5f12ec4065de7c532c483cdad93b7f50cca67e7d"
+rev = "721b915d12dd899a67596cd3d9357a31c0af45b5"
 replace-with = "vendored-sources"
 
 [source."git+https://github.com/mozilla/cubeb-pulse-rs?rev=e0ddf430162f9113a9a90dc52b349d273baa3ec5"]
