Bug 1978987 - Test finding Seamonkey profiles in importer. r=mkmelin
Differential Revision: https://phabricator.services.mozilla.com/D262745

--- a/mailnews/import/test/unit/xpcshell.toml
+++ b/mailnews/import/test/unit/xpcshell.toml
@@ -9,6 +9,8 @@ tags = ["import"]
 ["test_AddrBookFileImporter.js"]
 tags = ["vcard"]
 
+["test_SeamonkeyProfileImporter.js"]
+
 ["test_ThunderbirdProfileImporter.js"]
 support-files = [
   "../../../../mail/components/addrbook/test/browser/data/import.mab",
