--- a/taskcluster/config.yml
+++ b/taskcluster/config.yml
@@ -11,6 +11,7 @@ treeherder:
         # Images/Packages/Toolchain
         'Deb8': 'Packages for Debian 8'
         'Deb8-32': 'Packages for Debian 8 32-bits'
+        'Deb10a64': 'Packages for Debian 10 for aarch64'
         'Deb12': 'Packages for Debian 12'
         'Fetch': 'Fetch and store content'
         'Ub18': 'Packages for Ubuntu 18.04'
@@ -153,6 +154,11 @@ workers:
             os: linux
             worker-type: '{alias}'
         images-gcp:
+            provisioner: '{trust-domain}-{level}'
+            implementation: docker-worker
+            os: linux
+            worker-type: '{alias}'
+        images-gcp-aarch64:
             provisioner: '{trust-domain}-{level}'
             implementation: docker-worker
             os: linux
