Bug 1985421 - Refactor zip file extraction in importer code. r=mkmelin
It makes more sense if this code lives with the importers, not the UI.

Differential Revision: https://phabricator.services.mozilla.com/D263320

--- a/mailnews/import/test/unit/xpcshell.toml
+++ b/mailnews/import/test/unit/xpcshell.toml
@@ -17,5 +17,7 @@ support-files = [
   "../../../../mail/components/addrbook/test/browser/data/import.sql",
 ]
 
+["test_extractZip.js"]
+
 ["test_outlook_settings.js"]
 run-if = ["os == 'win'"]
