--- a/mailnews/protocols/ews/test/unit/xpcshell.toml
+++ b/mailnews/protocols/ews/test/unit/xpcshell.toml
@@ -7,6 +7,8 @@ support-files = ["data/*"]
 
 ["test_ewsFilters.js"]
 
+["test_folder_operations.js"]
+
 ["test_folder_sync.js"]
 
 ["test_item_operations.js"]
