Bug 1987033 - Break up mailWidgets.js. r=mkmelin
Differential Revision: https://phabricator.services.mozilla.com/D263822

--- a/mail/base/test/widgets/browser.toml
+++ b/mail/base/test/widgets/browser.toml
@@ -14,6 +14,10 @@ support-files = ["files/**"]
 ["browser_autoTreeView.js"]
 skip-if = ["headless && os == 'linux'"]  # See bug 1806870.
 
+["browser_customElementUtils.js"]
+
+["browser_customElements.js"]
+
 ["browser_dropIndicator.js"]
 skip-if = ["headless"]
 
