--- a/mailnews/protocols/ews/test/browser/browser.toml
+++ b/mailnews/protocols/ews/test/browser/browser.toml
@@ -1,4 +1,5 @@
 [DEFAULT]
+head = "head.js"
 prefs = [
   "mail.provider.suppress_dialog_on_startup=true",
   "mail.spotlight.firstRunDone=true",
@@ -15,3 +16,5 @@ subsuite = "thunderbird"
 ["browser_openPGP.js"]
 
 ["browser_remote_content_blocking.js"]
+
+["browser_repair_folder.js"]
