Bug 1989067 - Hide irrelevant strings and options from the properties of EWS folders. r=vineet
Differential Revision: https://phabricator.services.mozilla.com/D265137

--- a/mailnews/protocols/ews/test/browser/browser.toml
+++ b/mailnews/protocols/ews/test/browser/browser.toml
@@ -11,6 +11,8 @@ subsuite = "thunderbird"
 
 ["browser_feedback.js"]
 
+["browser_folder_props.js"]
+
 ["browser_basic_notifications.js"]
 
 ["browser_openPGP.js"]
