--- a/.gecko_rev.yml
+++ b/.gecko_rev.yml
@@ -1,8 +1,8 @@
 ---
 GECKO_BASE_REPOSITORY: https://hg.mozilla.org/mozilla-unified
-GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/releases/mozilla-release
-GECKO_HEAD_REF: FIREFOX_143_0_BUILD1
-GECKO_HEAD_REV: 62b30a28e7a4110ced2411d4b81bcb1256839616
+GECKO_HEAD_REPOSITORY: https://hg-edge.mozilla.org/releases/mozilla-release
+GECKO_HEAD_REF: FIREFOX_143_0_1_RELEASE
+GECKO_HEAD_REV: 644b498d517849c3fb95679e2017e965fe62b77a
 ######
 
 ### For comm-central
