--- a/taskcluster/comm_taskgraph/manifests/thunderbird_nightly.yml
+++ b/taskcluster/comm_taskgraph/manifests/thunderbird_nightly.yml
@@ -46,6 +46,7 @@ tasktype_map:
     repackage-signing-msi: repackage
     repackage-signing-shippable-l10n-msix: signing
     release-deb-repackage: repackage
+    repackage-deb-l10n: repackage
 platform_names:
     filename_platform:
         by-platform:
@@ -221,6 +222,25 @@ mapping:
                 default:
                     - ${year}/${month}/${upload_date}-${branch}-l10n/${filename_platform}/xpi
                     - latest-${branch}-l10n/${filename_platform}/xpi
+    target.langpack.deb:
+        <<: *default
+        all_locales: true
+        description: "langpack.xpi repackaged as a .deb"
+        from:
+            - repackage-deb-l10n
+        only_for_platforms:
+            - linux-shippable
+            - linux64-shippable
+        pretty_name: thunderbird-${version}.${locale}.langpack.deb
+        checksums_path: thunderbird-${version}.${locale}.langpack.deb
+        destinations:
+            by-locale:
+                en-US:
+                    - ${year}/${month}/${upload_date}-${branch}
+                    - latest-${branch}
+                default:
+                    - ${year}/${month}/${upload_date}-${branch}-l10n/${filename_platform}/deb-l10n
+                    - latest-${branch}-l10n/${filename_platform}/deb-l10n
     mar:
         <<: *default
         description: "Alongside `mbsdiff`, a tool used to generate partials"
