--- a/taskcluster/kinds/beetmover-repackage/kind.yml
+++ b/taskcluster/kinds/beetmover-repackage/kind.yml
@@ -30,7 +30,7 @@ kind-dependencies:
     - partials-signing
     - repackage-signing-msi
     - repackage-signing-shippable-l10n-msix
-    - release-deb-repackage
+    - repackage-deb
     - repackage-deb-l10n
     - mar-signing
     - mar-signing-l10n
