Bug 1987733 - Revert to earlier way of creating folders when sending/saving messages. r=mkmelin
This goes back to a pre-bug-1958106 behaviour for dealing with these folders, until we can make a
better way to create remote folders (and avoid dangling folders) when needed.

Differential Revision: https://phabricator.services.mozilla.com/D266568

--- a/mail/components/compose/test/browser/browser.toml
+++ b/mail/components/compose/test/browser/browser.toml
@@ -18,6 +18,8 @@ subsuite = "thunderbird"
 
 ["browser_sendMessage_certError.js"]
 
+["browser_sendMessage_copies.js"]
+
 ["browser_sendMessage_oAuth2.js"]
 tags = "oauth"
 
