Bug 856519 - multiple mail copy/move fails with IMAP/offline-use=Off (test only). r=BenC
Adjusted to code base in 2025:
  - Linted
  - nsIMsgDatabase.enumerateMessages() - lower case
  - nsIMsgCopyService.copyMessages() - lower case, change of type of message array parameter
  - Changed generator functions to async functions
  - .storeToken is a proper attribute now.

Differential Revision: https://phabricator.services.mozilla.com/D266728

--- a/mailnews/imap/test/unit/xpcshell-shared.toml
+++ b/mailnews/imap/test/unit/xpcshell-shared.toml
@@ -98,6 +98,8 @@ skip-if = ["os == 'mac'"]
 
 ["test_mailboxes.js"]
 
+["test_multipleCopyNonlocal.js"]
+
 ["test_nsIMsgFolderListenerIMAP.js"]
 
 ["test_offlineCopy.js"]
