Bug 1992568 - Use the firefox config for repositories. rs=bustage-fix

--- a/taskcluster/config.yml
+++ b/taskcluster/config.yml
@@ -132,8 +132,8 @@ taskgraph:
     register: comm_taskgraph:register
     decision-parameters: 'comm_taskgraph.decision:get_decision_parameters'
     repositories:
-        comm:
-            name: 'Mozilla Thunderbird'
+        gecko:
+            name: 'Mozilla Firefox'
 
 workers:
     aliases:
