--- a/mail/test/browser/composition/browser1.toml
+++ b/mail/test/browser/composition/browser1.toml
@@ -44,13 +44,15 @@ prefs = [
   "mailnews.start_page.override_url=about:blank",
   "mailnews.start_page.url=about:blank",
 ]
-skip-if = ["os == 'linux' && bits == 32 && debug"]  # Perma-fail
 subsuite = "thunderbird"
 support-files = [
   "data/**",
   "../openpgp/data/**",
   "html/linkpreview.html",
 ]
+
+# Tests in this folder are split across multiple manifests. When adding a test,
+# please put it in the manifest with its (alphabetical) neighbours.
 
 ["browser_addressWidgets.js"]
 
@@ -73,121 +75,3 @@ skip-if = ["headless"]  # clipboard doesn't work with headless
 ["browser_checkRecipientKeys.js"]
 
 ["browser_cp932Display.js"]
-
-["browser_customHeaders.js"]
-
-["browser_draftIdentity.js"]
-skip-if = ["os == 'mac'"]
-reason = "See bug 1413851."
-
-["browser_drafts.js"]
-
-["browser_emlActions.js"]
-
-["browser_encryptedBccRecipients.js"]
-tags = ["openpgp"]
-
-["browser_expandLists.js"]
-
-["browser_focus.js"]
-
-["browser_font_color.js"]
-skip-if = ["os == 'mac'"]
-reason = "Cannot open the Format menu"
-
-["browser_font_family.js"]
-skip-if = ["os == 'mac'"]
-reason = "Cannot open the Format menu"
-
-["browser_font_size.js"]
-skip-if = ["os == 'mac'"]
-reason = "Cannot open the Format menu"
-
-["browser_forwardDefectiveCharset.js"]
-
-["browser_forwardHeaders.js"]
-
-["browser_forwardRFC822Attach.js"]
-
-["browser_forwardUTF8.js"]
-
-["browser_forwardedContent.js"]
-
-["browser_forwardedEmlActions.js"]
-
-["browser_identityColors.js"]
-
-["browser_imageDisplay.js"]
-
-["browser_imageInsertionDialog.js"]
-
-["browser_indentOutdent.js"]
-
-["browser_inlineImage.js"]
-skip-if = ["headless"]  # clipboard doesn't work with headless
-
-["browser_linkPreviews.js"]
-
-["browser_mailtoComposeFormat.js"]
-
-["browser_messageBody.js"]
-
-["browser_multipartRelated.js"]
-
-["browser_newmsgComposeIdentity.js"]
-
-["browser_paragraph_state.js"]
-skip-if = ["os == 'mac'"]
-reason = "Cannot open the Format menu"
-
-["browser_publicRecipientsWarning.js"]
-
-["browser_quoteMessage.js"]
-
-["browser_recipientPillsSelection.js"]
-
-["browser_redirect.js"]
-
-["browser_remove_text_styling.js"]
-skip-if = ["os == 'mac'"]
-reason = "Cannot open the Format menu"
-
-["browser_replyAddresses.js"]
-skip-if = ["debug"]  # Bug 1601591
-
-["browser_replyCatchAll.js"]
-
-["browser_replyFormatFlowed.js"]
-
-["browser_replyHTML.js"]
-
-["browser_replyMultipartCharset.js"]
-skip-if = ["debug"]  # Bug 1606542
-
-["browser_replySelection.js"]
-
-["browser_replySignature.js"]
-
-["browser_saveChangesOnQuit.js"]
-
-["browser_sendButton.js"]
-tags = ["addrbook"]
-skip-if = ["os == 'win' && bits == 64 && debug"]  # Bug 1601520
-
-["browser_sendFormat.js"]
-skip-if = ["os == 'mac'"]
-reason = "See bug 1763407"
-
-["browser_signatureInit.js"]
-
-["browser_signatureUpdating.js"]
-
-["browser_spelling.js"]
-
-["browser_subjectWas.js"]
-
-["browser_text_styling.js"]
-skip-if = ["os == 'mac'"]
-reason = "Cannot open the Format menu"
-
-["browser_xUnsent.js"]
