Bug 1992822 - Port bug 1947324 to Thunderbird - ensure Searchfox jobs fetch the WindowsAppSDK toolchain. r=darktrojan
Differential Revision: https://phabricator.services.mozilla.com/D267776

--- a/taskcluster/kinds/searchfox/kind.yml
+++ b/taskcluster/kinds/searchfox/kind.yml
@@ -145,8 +145,9 @@ tasks:
                 - nsis
                 - sysroot-wasm32-wasi
                 - sysroot-x86_64-linux-gnu
-                - win64-libotr
                 - vs
+                - win64-libotr
+                - winappsdk-x86_64-pc-windows-msvc
             fetch:
                 - upx-3.95-win
                 - windows-rs
