--- a/.gecko_rev.yml
+++ b/.gecko_rev.yml
@@ -1,8 +1,8 @@
 ---
 GECKO_BASE_REPOSITORY: https://hg.mozilla.org/mozilla-unified
-GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/releases/mozilla-beta
-GECKO_HEAD_REF: FIREFOX_144_0b8_RELEASE
-GECKO_HEAD_REV: b69abb7294b398b1274e777de33a0905da52ecf1
+GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/releases/mozilla-release
+GECKO_HEAD_REF: FIREFOX_144_0_BUILD2
+GECKO_HEAD_REV: 891fe1916a38e0f59abe348dec09ae0755b79367
 ######
 
 ### For comm-central
