Bug 1970846 - Update bouncer aliases now that ESR 128 is EOL. r=dandarnell a=coreycb

--- a/taskcluster/kinds/release-bouncer-aliases/kind.yml
+++ b/taskcluster/kinds/release-bouncer-aliases/kind.yml
@@ -46,21 +46,19 @@ tasks:
                     thunderbird-latest: installer
                     thunderbird-msi-latest-ssl: msi
                     thunderbird-msix-latest-ssl: msix
-                esr140: {} # Temporarily disable release bouncer check until ESR 140 is available in bouncer
-                #esr128:
-                    # when there is one ESR branch both sets of aliases work
+                esr140:
+                    # when there is one ESR branch both sets of aliases are set for that branch
                     # when there are two ESR branches ...
                     # ... these always point to the older branch
-                    #thunderbird-esr-latest-ssl: installer-ssl
-                    #thunderbird-esr-latest: installer
-                    #thunderbird-esr-msi-latest-ssl: msi
-                    #thunderbird-esr-msix-latest-ssl: msix
-                #esr140:
+                    thunderbird-esr-latest-ssl: installer-ssl
+                    thunderbird-esr-latest: installer
+                    thunderbird-esr-msi-latest-ssl: msi
+                    thunderbird-esr-msix-latest-ssl: msix
                     # ... these point to the newer branch
-                    #thunderbird-esr-next-latest-ssl: installer-ssl
-                    #thunderbird-esr-next-latest: installer
-                    #thunderbird-esr-next-msi-latest-ssl: msi
-                    #thunderbird-esr-next-msix-latest-ssl: msix
+                    thunderbird-esr-next-latest-ssl: installer-ssl
+                    thunderbird-esr-next-latest: installer
+                    thunderbird-esr-next-msi-latest-ssl: msi
+                    thunderbird-esr-next-msix-latest-ssl: msix
                 default: {}
         shipping-product: thunderbird
         treeherder:
