Bug 1992283 - Correctly query EWS folder names from the database. r=BenC
Differential Revision: https://phabricator.services.mozilla.com/D267486

--- a/mailnews/protocols/ews/test/unit/xpcshell.toml
+++ b/mailnews/protocols/ews/test/unit/xpcshell.toml
@@ -9,6 +9,8 @@ support-files = ["data/*"]
 
 ["test_ewsFilters.js"]
 
+["test_ewsFolder.js"]
+
 ["test_folder_operations.js"]
 
 ["test_folder_sync.js"]
