No bug - Pin mozilla-beta (FIREFOX_145_0b1_RELEASE/727346cd8fc). r=release a=dandarnell

--- a/.gecko_rev.yml
+++ b/.gecko_rev.yml
@@ -1,7 +1,8 @@
 ---
 GECKO_BASE_REPOSITORY: https://hg.mozilla.org/mozilla-unified
-GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/mozilla-central
-GECKO_HEAD_REF: default
+GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/releases/mozilla-beta
+GECKO_HEAD_REF: FIREFOX_145_0b1_RELEASE
+GECKO_HEAD_REV: 727346cd8fc1ab5df5ece0122891e3894567d019
 ######
 
 ### For comm-central
