Bug 1995666 - Port bug 1995058: Request a longer time for slow xpcshell tests. r=mkmelin a=coreycb
Differential Revision: https://phabricator.services.mozilla.com/D269531

--- a/mail/components/extensions/test/xpcshell/xpcshell-local.toml
+++ b/mail/components/extensions/test/xpcshell/xpcshell-local.toml
@@ -1,6 +1,7 @@
 [DEFAULT]
 dupe-manifest = true
 head = "head.js"
+requesttimeoutfactor = 2
 support-files = ["data/utils.js"]
 tags = [
   "local",
