--- a/mail/base/test/unit/xpcshell.toml
+++ b/mail/base/test/unit/xpcshell.toml
@@ -58,6 +58,7 @@ skip-if = ["os == 'mac' && !debug"]
 reason = "osx shippable perma failures"
 
 ["test_viewWrapper_virtualFolder.js"]
+requesttimeoutfactor = 2
 tags = ["virtualfolders"]
 
 ["test_viewWrapper_virtualFolderCustomTerm.js"]
