--- a/mail/components/accountcreation/test/xpcshell/xpcshell.toml
+++ b/mail/components/accountcreation/test/xpcshell/xpcshell.toml
@@ -13,6 +13,7 @@ tags = ["oauth"]
 skip-if = ["os == 'win' && msix"]  # MSIX cannot write to application directory
 
 ["test_findConfig.js"]
+requesttimeoutfactor = 2
 tags = ["oauth"]
 
 ["test_guessConfig.js"]
