--- a/mailnews/protocols/ews/src/components.conf
+++ b/mailnews/protocols/ews/src/components.conf
@@ -3,7 +3,8 @@ Classes = [
         "cid": "{6eaa0a24-78f6-4ad7-a28a-077d24022cd2}",
         "contract_ids": ["@mozilla.org/messenger/server;1?type=ews"],
         "headers": ["/comm/mailnews/protocols/ews/src/EwsIncomingServer.h"],
-        "type": "EwsIncomingServer"
+        "type": "EwsIncomingServer",
+        "init_method": "Init"
     },
     {
         "cid": "{b783f2c3-f836-4695-a320-1fd8378d57e9}",
