--- a/.gecko_rev.yml
+++ b/.gecko_rev.yml
@@ -1,8 +1,8 @@
 ---
 GECKO_BASE_REPOSITORY: https://hg.mozilla.org/mozilla-unified
-GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/releases/mozilla-release
-GECKO_HEAD_REF: FIREFOX_145_0_BUILD1
-GECKO_HEAD_REV: d1e862c9285944f5dc1ce162bf76724c33193c94
+GECKO_HEAD_REPOSITORY: https://hg-edge.mozilla.org/releases/mozilla-release
+GECKO_HEAD_REF: FIREFOX_145_0_RELEASE
+GECKO_HEAD_REV: 5b5b269e7de9f54f2d9de10e1aa4c6a7cb44fdfe
 ######
 
 ### For comm-central
