No bug - Pin mozilla-beta (FIREFOX_146_0b3_BUILD1/3a7b0fcfb0e). r=release a=coreycb

--- a/.gecko_rev.yml
+++ b/.gecko_rev.yml
@@ -1,8 +1,8 @@
 ---
 GECKO_BASE_REPOSITORY: https://hg.mozilla.org/mozilla-unified
-GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/releases/mozilla-beta
-GECKO_HEAD_REF: FIREFOX_146_0b1_BUILD1
-GECKO_HEAD_REV: c3f84a3b21de202822c3a9a7d0c743428dc8b8de
+GECKO_HEAD_REPOSITORY: https://hg-edge.mozilla.org/releases/mozilla-beta
+GECKO_HEAD_REF: FIREFOX_146_0b3_BUILD1
+GECKO_HEAD_REV: 3a7b0fcfb0e8c977686d84e27aea2af22b12e5b7
 ######
 
 ### For comm-central
